# Holex-Beast

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  lint_errors.txt  lint_report.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
core/: __init__.py  config.py  events.py  exceptions.py
core/agent/: __init__.py  agent.py  prompts.py
core/agent/tools/: __init__.py  base.py  calculator.py  code_runner.py  notes.py  reminders.py  system_control.py  timer_alarm.py  translate_convert.py  weather.py  web_search.py  wikipedia_tool.py
core/llm/: __init__.py  base.py  models.py  router.py
core/llm/providers/: __init__.py  gemini_provider.py  groq_provider.py  ollama_provider.py
core/memory/: __init__.py  conversation.py
core/plugins/: __init__.py  base.py  manager.py
core/rag/: __init__.py  pipeline.py
core/voice/: __init__.py  model_downloader.py  stt.py  tts.py  wake_word.py
gui/: __init__.py  app.py
gui/styles/: __init__.py  stylesheet.py
gui/widgets/: __init__.py  chat_bubbles.py  control_center.py  input_bar.py  settings_panel.py  sidebar.py  toolbar.py  tools_panel.py  top_header.py  voice_overlay.py  voice_visualizer.py  welcome_screen.py
plugins/: __init__.py
services/: __init__.py  firebase_service.py
tests/: test_agent.py  test_config.py  test_conversation.py  test_events.py  test_llm.py  test_misc.py  test_router.py  test_security.py
